--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     </head>
     <body>
 
+        <img src = "etechmonkey logo.png" width=500>
         <h1>Etech Monkey Page</h1>
         <p>Monkey see, monkey do</p>
-        <marquee>Monkey business</marquee>
+        <marquee><a href="https://en.wikipedia.org/wiki/Monkey_Business_(1952_film)">Monkey business</a></marquee>
 
+        Click <a href="aboutus.html">here</a> to learn more about the team.
     </body>
 </html>
