--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
 
         <img src = "etechmonkey logo.png" width=500>
         <h1>The team</h1>
-        <img src = "DZ headshot.jpg">
+        <img src = "DZ headshot.jpg" width=500>
         <h3>Deanna Zhang is the only member of the team right now.</h3>
         Click <a href="index.html">here</a> to go back home.
     </body>
