--- a/aboutus.html
+++ b/aboutus.html
@@ -1,12 +1,23 @@
 <html>
     <head>
         <title>About us</title>
-        
+        <style>
+            body {
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+            }
+            
+            h1 { 
+                color: green; 
+            }
+            h3 { 
+                color: gray; 
+            }            
+        </style>
     </head>
     <body>
 
         <img src = "etechmonkey logo.png" width=500>
-        <h1>The team</h1>
+        <h1 style = "font-family: Arial;">The team</h1>
         <img src = "DZ headshot.jpg" width=500>
         <h3>Deanna Zhang is the only member of the team right now.</h3>
         Click <a href="index.html">here</a> to go back home.
